@@ -1,12 +1,12 @@
 Package: SoilR
 Title: Models of Soil Organic Matter Decomposition
-Version: 1.1-28
-Date: 2016-07-20
-Author: Carlos A. Sierra,
-	Markus Mueller
+Version: 1.1-29
+Date: 2016-07-22
+Author: Carlos A. Sierra, Markus Mueller
 Maintainer: Markus Mueller <mamueller@bgc-jena.mpg.de>
-Description: Functions for modeling Soil Organic Matter decomposition in terrestrial ecosystems with linear and nonlinear models.  
+Description: Functions for modeling Soil Organic Matter decomposition
+        in terrestrial ecosystems with linear and nonlinear models.
 License: GPL-3
-Depends: deSolve,methods,parallel,RUnit
+Depends: deSolve,methods,parallel,RUnit,expm
 Suggests: FME,lattice,MASS
 LazyData: TRUE
